<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="25dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/enter_details"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInpUserNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        app:boxCornerRadiusTopEnd="13dp"
        app:boxCornerRadiusTopStart="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="35dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInpAddressLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        app:boxCornerRadiusTopEnd="13dp"
        app:boxCornerRadiusTopStart="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInpUserNameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPersonAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="35dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInpContactLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        app:boxCornerRadiusTopEnd="13dp"
        app:boxCornerRadiusTopStart="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInpAddressLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPersonContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/contact"
            android:inputType="text|phone"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="35dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInpDoBLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        app:boxCornerRadiusTopEnd="13dp"
        app:boxCornerRadiusTopStart="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInpContactLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPersonDoB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/dob"
            android:inputType="date"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="35dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnInsertData"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/cardview_light_background"
        android:text="@string/insert_new_data"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:cornerRadius="13dp"
        app:layout_constraintBottom_toTopOf="@+id/btnUpdateData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUpdateData"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/cardview_light_background"
        android:text="@string/update_data"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:cornerRadius="13dp"
        app:layout_constraintBottom_toTopOf="@+id/btnDeleteData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDeleteData"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/cardview_light_background"
        android:text="@string/delete_data"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:cornerRadius="13dp"
        app:layout_constraintBottom_toTopOf="@+id/btnViewData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnViewData"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="@color/cardview_light_background"
        android:text="@string/view_data"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:cornerRadius="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
